--- a/Project/design (1)/design/assets/bootstrap/css/bootstrap.css
+++ b/Project/design (1)/design/assets/bootstrap/css/bootstrap.css
@@ -4617,7 +4617,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #B7F045;
+  background-color: #31B4F6;
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
