--- a/Project/design (1)/design/assets/bootstrap/css/bootstrap.css
+++ b/Project/design (1)/design/assets/bootstrap/css/bootstrap.css
@@ -4521,7 +4521,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #B7F045;
+  background-color: #FB7311;
   border-color: black;
 }
 .navbar-default .navbar-brand {
@@ -4547,7 +4547,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #555;
-  background-color: #e7e7e7;
+  background-color: #fff;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
